# ipc_demo_server

./: .clang-format  .gitignore  CMakeLists.txt
include/: IpcDemoServer.hpp  Version.hpp.in
src/: IpcDemoServer.cpp  main.cpp
